--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1489,6 +1489,11 @@ h2.hero-title {
   }
 }
 
+form .btn-danger {
+  margin-top: .25em;
+  margin-bottom: 1.75em;
+}
+
 form .fieldgroup {
   margin-bottom: 1.5em;
 }
