Made a:hover strong match parent style

--- a/scss/_default-variables.scss
+++ b/scss/_default-variables.scss
@@ -11,7 +11,7 @@
  */
 
 // Set the proper directory for the Bootstrap Glyphicon font.
-$icon-font-path: 'https://www.vancouver.wsu.edu/themes/bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.woff';
+$icon-font-path: '/themes/bootstrap/assets/fonts/bootstrap/';
 
 // SCAFFOLDING
 
