--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -71,7 +71,7 @@
 
 <!-- NAVIGATION BAR -->
 
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-primary-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
@@ -229,7 +229,7 @@
   		<ul>
    			<li class="sitemap-section">Academics</li>
   			<li><a href="https://cas.vancouver.wsu.edu">Arts and Sciences</a></li>
-        <li><a href="https://business.vancouver.wsu.edu">Business</a></li>
+        <li><a href="http://business.vancouver.wsu.edu">Business</a></li>
         <li><a href="https://murrow.vancouver.wsu.edu">Communication</a></li>
   			<li><a href="https://education.vancouver.wsu.edu">Education</a></li>
   			<li><a href="https://ecs.vancouver.wsu.edu">Engineering and Computer Science</a></li>
