Remove border on < 767.98 px viewport width

--- a/css/style.css
+++ b/css/style.css
@@ -7031,6 +7031,7 @@ body > div.container-max-width > div.dialog-off-canvas-main-canvas > div > div >
   .region-content table {
     display: block;
     overflow-x: auto;
+    border-style: none;
     max-width: 87%; } }
 
 h1.page-header,
