--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -93,6 +93,7 @@
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/financial-aid">Financial aid</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/student-life">Student life</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/request-information">Request info</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/admissions-counselors">Make appointment</a></li>                  
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/visit-us">Visit us</a></li>
                 </ul>
             </li>
