--- a/css/style.css
+++ b/css/style.css
@@ -7498,13 +7498,12 @@ div.region.region-content > ol {
 /* BLOCK REGION - CONTENT - Google Custom Search results */
 #___gcse_0 > div {
   font-family: "Source Sans Pro", Helvetica, Arial, sans-serif; }
-  #___gcse_0 > div table td {
-    border: 1px solid #fff; }
 
 #gsc-iw-id1 {
   height: 50px;
   font-size: 2em;
-  padding-left: 10px; }
+  padding-left: 12px;
+  padding-top: 12px; }
 
 #___gcse_0 > div {
   margin-left: 1em; }
@@ -7514,10 +7513,6 @@ div.region.region-content > ol {
   padding: .5em;
   margin-right: -3em;
   margin-top: -2em; }
-
-#gs_tti50 {
-  vertical-align: top;
-  margin-top: -1.5em; }
 
 table.gsc-search-box td {
   padding: 0; }
@@ -7538,7 +7533,8 @@ table.gsc-search-box td {
   background-color: #981e32;
   width: 50px;
   height: 50px;
-  padding: .5em; }
+  padding: .5em;
+  margin-top: 0; }
 
 .gsc-above-wrapper-area {
   margin-right: 1em; }
@@ -7546,9 +7542,12 @@ table.gsc-search-box td {
 #___gcse_0 > div > div > div > div.gsc-wrapper > div.gsc-resultsbox-visible > div > table > tbody > tr > td.gsc-twiddleRegionCell.gsc-twiddle-opened {
   display: none; }
 
-.gsc-webResult .gsc-result:hover {
-  margin-left: -1px;
-  margin-bottom: 1px; }
+#___gcse_0 > div > div > div > div.gsc-wrapper > div.gsc-resultsbox-visible > div > div > div.gsc-expansionArea > div > div.gs-webResult.gs-result > div.gsc-thumbnail-inside > div > a {
+  text-decoration: underline; }
+
+#___gcse_0 > div > div > div > div.gsc-wrapper > div.gsc-resultsbox-visible > div > div > div.gsc-expansionArea > div > div.gs-webResult.gs-result > div.gsc-thumbnail-inside > div > a:hover,
+#___gcse_0 > div > div > div > div.gsc-wrapper > div.gsc-resultsbox-visible > div > div > div.gsc-expansionArea > div > div.gs-webResult.gs-result > div.gsc-thumbnail-inside > div > a:focus {
+  text-decoration: none; }
 
 .gsc-thumbnail-inside {
   margin-top: 2em; }
