Restore footer link
Policy link

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -250,6 +250,7 @@
       <li><a href="https://access.wsu.edu/">Access</a></li>
       <li><a href="https://ucomm.wsu.edu/wsu-copyright-policy/">Copyright</a></li>
       <li><a href="https://policies.wsu.edu/">Policies</a></li>
+      <li><a href="https://policies.wsu.edu/prf/index/wac/">Rule Making</a></li>
     </ul>
   </div>
   <div class="col-md-6">
