Add Canvas link to global drop-down menus

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -104,6 +104,7 @@
                   <li><a href="https://registrar.wsu.edu/academic-calendar">Academic calendar</a></li>
                   <li><a href="https://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
+                  <li><a href="https://canvas.wsu.edu/">Canvas</a></li>
                   <li><a href="http://schedules.wsu.edu">Class schedule</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/campus-map-directions">Campus map</a></li>
                   <li><a href="https://vancouver-wsu.campuslabs.com/engage/">CougSync</a></li>
@@ -141,6 +142,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
                   <li><a href="https://learn.wsu.edu/">Blackboard</a></li>
+                  <li><a href="https://canvas.wsu.edu/">Canvas</a></li>                   
                   <li><a href="https://directory.vancouver.wsu.edu">Directory</a></li>
                   <li><a href="https://office365.wsu.edu/">Email and Office 365</a></li>
                   <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
