--- a/scss/_default-variables.scss
+++ b/scss/_default-variables.scss
@@ -11,7 +11,7 @@
  */
 
 // Set the proper directory for the Bootstrap Glyphicon font.
-$icon-font-path: '/themes/bootstrap/assets/fonts/bootstrap/';
+$icon-font-path: '/themes/bootstrap-sass-3.3.7/assets/fonts/bootstrap/';
 
 // SCAFFOLDING
 
