Navigation label: CougSync is now Coug Presence
Launch TBD

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -107,7 +107,7 @@
                   <li><a href="https://canvas.wsu.edu/">Canvas</a></li>
                   <li><a href="http://schedules.wsu.edu">Class schedule</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/campus-map-directions">Campus map</a></li>
-                  <li><a href="https://studentaffairs.vancouver.wsu.edu/osi">CougSync</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/osi">Coug Presence</a></li>
                   <li><a href="https://office365.wsu.edu/">Email and Office 365</a></li>
                   <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a>
