Comment out placeholder rule

--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1671,11 +1671,11 @@ div.region.region-content > ol {
 
 /* BLOCK REGION - CONTENT - Google Custom Search results */
 
-#___gcse_0 > div {
+/* #___gcse_0 > div {
   font-family: $font-family-sans-serif;
   table td {
   }
-}
+} */
 
 #gsc-iw-id1 {
   height: 50px;
