minor: navbar menu label change

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -87,13 +87,13 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Admissions dropdown menu">Admissions <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions home</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/admissions-counselors">Connect with us</a></li>                  
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/undergraduate-students">Requirements</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/tuition-and-affordability">Tuition</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/financial-aid">Financial aid</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/student-life">Student life</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/request-information">Request info</a></li>
-                  <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/admissions-counselors">Make appointment</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/visit-us">Visit us</a></li>
                 </ul>
             </li>
