--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -107,8 +107,8 @@
                   <li><a href="https://canvas.wsu.edu/">Canvas</a></li>
                   <li><a href="http://schedules.wsu.edu">Class schedule</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/campus-map-directions">Campus map</a></li>
-                  <li><a href="https://vancouver-wsu.presence.io/">Coug Presence</a></li>
-                  <li><a href="https://office365.wsu.edu/">Email and Office 365</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/osi">Coug Presence</a></li>
+                  <li><a href="http://email.wsu.edu/">Email and Office 365</a></li>
                   <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a>
                   <li><a href="https://www.vancouver.wsu.edu/information-technology">Tech Support</a></li>
@@ -144,10 +144,11 @@
                   <li><a href="https://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="https://canvas.wsu.edu/">Canvas</a></li>
                   <li><a href="https://directory.vancouver.wsu.edu">Directory</a></li>
-                  <li><a href="https://office365.wsu.edu/">Email and Office 365</a></li>
+                  <li><a href="http://email.wsu.edu/">Email and Office 365</a></li>
                   <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/information-technology">Tech Support</a></li>
+                  <li><a href="http://workday.wsu.edu/">Workday</a></li>
                 </ul>
             </li>
         </ul>
