Add Google Fonts: Montserrat
100;400;700;900 and updated Google Fonts preconnect <link> in header.

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -61,7 +61,9 @@
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="https://www.vancouver.wsu.edu/themes/bootstrap_sass_wsuv/images/favicon.ico" />
   </head>
   <body{{ attributes.addClass(body_classes) }}>
